<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_worlds"
        android:name="dam.pmdm.spyrothedragon.ui.WorldsFragment"
        android:label="@string/worlds"
        tools:layout="@layout/fragment_worlds" >
        <action
            android:id="@+id/action_worlds_to_collectibles"
            app:destination="@id/navigation_collectibles"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/navigation_characters"
        android:name="dam.pmdm.spyrothedragon.ui.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters">
    <action
        android:id="@+id/action_characters_to_worlds"
        app:destination="@id/navigation_worlds"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/slide_out_left" />
</fragment>

    <fragment
        android:id="@+id/navigation_collectibles"
        android:name="dam.pmdm.spyrothedragon.ui.CollectiblesFragment"
        android:label="@string/collectibles"
        tools:layout="@layout/fragment_collectibles">
        <action
            android:id="@+id/action_collectiblesFragment_to_videoFragment"
            app:destination="@id/videoFragment"/>

    </fragment>



    <!-- Guía de la aplicación -->
    <fragment
        android:id="@+id/guiaFragment"
        android:name="dam.pmdm.spyrothedragon.ui.GuiaFragment"
        android:label="@string/guia"
        tools:layout="@layout/fragment_guia"/>


    <!-- VideoFragment -->
    <fragment
        android:id="@+id/videoFragment"
        android:name="dam.pmdm.spyrothedragon.ui.VideoFragment"
        android:label="Video Fragment" >
    <action
    android:id="@+id/action_videoFragment_to_collectiblesFragment"
    app:destination="@id/navigation_collectibles"/>

</fragment>



</navigation>