<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple">

    <!-- Título -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumen_guia"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textAllCaps="true"
        />

    <!-- Lista de pasos completados -->
    <LinearLayout
        android:id="@+id/listaPasos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <!-- Paso 1: Bienvenida -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <CheckBox
                android:id="@+id/checkPaso1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paso1"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Paso 2: Personajes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <CheckBox
                android:id="@+id/checkPaso2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paso2"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Paso 3: Mundos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <CheckBox
                android:id="@+id/checkPaso3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paso3"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Paso 4: Coleccionables -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <CheckBox
                android:id="@+id/checkPaso4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paso4"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Paso 5: Icono de Información -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <CheckBox
                android:id="@+id/checkPaso5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paso5"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>
    <!-- Botón "Comenzar" -->
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
       >

        <!-- Imagen de fondo -->
        <ImageButton
            android:id="@+id/btnComenzar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gems"
android:background="@color/purple"
            android:scaleType="centerCrop"
            android:contentDescription="@string/descripcion_imagen"/>

        <!-- Texto superpuesto -->
        <TextView
            android:id="@+id/textoBtnComenzar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/comenzar"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>
